# reckon

./: .env.example  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
reckon/: config.py  db.py  main.py
reckon/analysis/: __init__.py  narrative.py  scorer.py  scoring.py  weights.py
reckon/api/: assessment.py  assessments.py  deps.py  indicators.py  ingestion.py  locations.py
reckon/ingestion/: __init__.py  acled.py  base.py  economic.py  existential.py  metaculus.py  military.py  news_sentiment.py  political.py  polymarket.py
reckon/locations/: __init__.py  geocoder.py  intel.py  nuclear.py  resources.py
reckon/models/: __init__.py  assessment.py  indicator.py  location.py
reckon/schemas/: assessment.py  indicator.py  location.py
scripts/: fetch_acled.py  fetch_fred.py  fetch_metaculus.py  fetch_news_sentiment.py  fetch_polymarket.py  generate_narrative.py
tests/: conftest.py  test_acled.py  test_metaculus.py  test_narrative.py  test_news_sentiment.py  test_nuclear.py  test_polymarket.py  test_scorer.py  test_scoring.py
